--- a/titanic/Titanic predict.ipynb
+++ b/titanic/Titanic predict.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The real\n",
     "\n",
-    "After having computed a baseline from which to judge our performance, lets see if we can break the 80% accuracy barrier. Since we have a limited dataset, we will use k-fold cross validation to estimate the accuracy of our model and will attempt a decision tree vs logistic regression.  This will require two sets of features, one for logistic regrression model(since 1-hot encoding is required) and one for the decision tree."
+    "This notebook is to serve as a full compareson of model using better feature extraction.  We will extract surnames, an interaction between age and fare, and the total family size"
    ]
   },
   {
