--- a/notebooks/Feature Engineering.ipynb
+++ b/notebooks/Feature Engineering.ipynb
@@ -17,6 +17,12 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('../scripts/'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -43,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_raw['Fam_size'] = data_raw['SibSp'] + data_raw['Parch'] + 1\n",
@@ -108,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
