--- a/notebooks/Feature Engineering.ipynb
+++ b/notebooks/Feature Engineering.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "Family size is a discrete quantitative variable. As such, this will not require 1-hot encoding.\n",
     "\n",
-    "First I will plot the survival rates at each discrete value in Parch and SibSp to see if there is a significant discrepancy.  Included is a plot of survival counts to show how heavy of a class imbalance there is."
+    "First I will plot the survival rates at each discrete value in Parch, SibSp, and Fam size to see if there is a significant discrepancy.  Included is a plot of survival counts to show how heavy of a class imbalance there is in survival rates."
    ]
   },
   {
@@ -211,6 +211,46 @@
     "df['Survived'].value_counts().plot.bar(title='Survival Count')\n",
     "plt.xlabel('Survived')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the Fam size graph, individuals with no family died at much higher rate than those with family members aboard. Since Parch and SibSp are heavily correlated with Fam size, I will remove them from the feature set. \n",
+    "\n",
+    "Next we will look at the effect of the survival rate among individuals who are alone against the survival rate of individuals with family members aboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(ncols=3, figsize=(11, 3))\n",
+    "\n",
+    "# Individuals\n",
+    "\n",
+    "# With family"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks as if survival rate drops among individuals with a large amount of family aboard the ship but there may not be enough data to show this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
